# tskit-ld

./: .gitignore  pyproject.toml
.github/workflows/: docker.yml
analysis/misc/: BranchAlgoRewriteDemo.ipynb  NewBranchAlgoBench.ipynb
analysis/msprime-sims/: two-deme-ld-decay.yml  two-deme-model.yml
analysis/validation/: BranchSiteConvergence.ipynb  msprime-ld-matrix.yml  validation.py
benchmarks/notebooks/: LDMatrixBenchmarks.ipynb
benchmarks/sim/docker/: entrypoint
benchmarks/sim/submission/: docker.sub  gen-params  params.csv
docker/analysis/: Dockerfile  requirements-frozen.txt
docker/derived/: Dockerfile-spatial-analysis  requirements-frozen.txt
docker/ld-base/: Dockerfile  requirements.txt
docker/slim/: Dockerfile  main-spatial.slim
etc/: dev-requirements-frozen.txt  dev-requirements.txt  emacs-tskit-ld.service  requirements-frozen.txt  requirements.txt
scripts/: make-ve
spatial-ld/analysis/docker/: Dockerfile  entrypoint  requirements-frozen.txt  spatial.py
spatial-ld/analysis/generation-time/: GenerationTime.ipynb
spatial-ld/analysis/ld-decay-impl/: LDDecay.ipynb  LDDecayMoments.ipynb
src/analysis/: test.py
src/simulations/: slim.py
src/tskit_ld/: io.py  ld_decay.py  ld_decay_moments.py  plots.py  spatial.py  summary_statistics.py  tree_tools.py  types.py
stubs/tskit/: __init__.pyi
validation/docker/: Dockerfile  analysis.py  requirements.txt
validation/notebooks/: BranchStatisticalValidation.ipynb  MultipopulationStats.ipynb  SiteStatisticalValidation.ipynb
validation/submission/: docker.sub  gen-seeds
(+4983 files in other folders)
