[project]
name = "tskit-ld"
version = "0.1"
dynamic = ["dependencies"]

[build-system]
requires = ["pip==24.1.1", "setuptools==70.1.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["docker/derived/requirements-frozen.txt"]}

[tool.pyright]
venvPath = "."
venv = "ve"
