[project]
name = "tskit-ld"
dynamic = ["dependencies", "version"]

[build-system]
requires = ["pip==24.1.1", "setuptools==70.1.1", "setuptools_scm==8.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["etc/requirements.txt"]}
optional-dependencies.frozen = {file = ["docker/derived/requirements-frozen.txt"]}

[tool.pyright]
venvPath = "."
venv = "ve"
stubPath = "src/stubs"

[tool.isort]
profile = "black"

[tool.setuptools_scm]