[project]
name = "tskit-ld"
dynamic = ["dependencies", "version"]

[build-system]
requires = ["pip==24.1.1", "setuptools==70.1.1", "setuptools_scm==8.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["etc/requirements.txt"]}

[tool.pyright]
venvPath = "."
venv = "ve"
stubPath = "stubs"
include = ["src"]

[tool.isort]
profile = "black"
src_paths = ["src"]
virtual_env = "ve"

[tool.ruff]
src = ["src"]

[tool.setuptools_scm]
